Revert "ui(richtext): fix toolbar z-index (#325)" (#349)
This reverts commit 044d3ba27c63edf8ff00c733190a957515effb46.

--- a/src/assets/css/new/components/rich-field.less
+++ b/src/assets/css/new/components/rich-field.less
@@ -25,8 +25,6 @@
         padding: 4px 4px 4px 1px !important;
         transition: border-color 0.2s;
         min-height: 200px;
-        position: relative;
-        z-index: 2;
 
         @media @mobiles {
             margin-top: 4px;
